WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72167
REGRESSION: Scroll position not restored on back after scroll
https://bugs.webkit.org/show_bug.cgi?id=72167
Summary
REGRESSION: Scroll position not restored on back after scroll
Beth Dakin
Reported
2011-11-11 12:47:44 PST
1) Visit
http://newyork.craigslist.org/csr/
2) Scroll to middle of listings, e.g. more than one screen page in. 3) Click on link. 4) Once on the linked page, go back. 5) Scroll. At this point, the page visually jumps to the top and starts scrolling from the top. This jump should not occur; it should just start scrolling. <
rdar://problem/10410684
> This is a regression from
http://trac.webkit.org/changeset/98178
Attachments
Patch
(2.08 KB, patch)
2011-11-11 12:53 PST
,
Beth Dakin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2011-11-11 12:53:48 PST
Created
attachment 114754
[details]
Patch
Simon Fraser (smfr)
Comment 2
2011-11-11 14:17:11 PST
Comment on
attachment 114754
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=114754&action=review
> Source/WebCore/ChangeLog:12 > + therefore it's not on an active page). We should not notify AppKit that the page
…therefor when not…?
Beth Dakin
Comment 3
2011-11-11 14:21:09 PST
Agreed, that phrasing is better. Committed change with revision 100022.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug